# pubsub-counter

./: .env.example  .gitignore  README.md  pyproject.toml
src/pubsub_message_counter/: main.py
